# py-fullstack-template

./: .gitignore  .mdformat.toml  CLAUDE.md  README.md  pyproject.toml  zensical.toml
.claude/: commit-changes.md  merge-pr.md  upgrade-environment.md
.claude/commands/: check.md  commit-changes.md  merge-pr.md  upgrade-environment.md
api/: main.py
app/: app.py
app/pages/: api_client.py  package_demo.py
docs/: getting-started.md  index.md  publishing.md
docs/guide/: getting-started.md  publishing.md
docs/reference/: index.md
example_pkg/: __init__.py  calculator.py  counter.py
tests/: test_api.py  test_calculator.py  test_counter.py
