[project]
name = "py-fullstack-template"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "example_pkg"
module-root = ""

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mdformat-frontmatter>=2.0.10",
    "mkdocstrings-python>=2.0.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "zensical>=0.0.20",
]
